<resources>
    <string name="app_name">Tasty</string>
    <string name="welcome_to_tasty">Welcome To Tasty</string>
    <string name="click">Click</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="test">Test</string>
    <string name="enter">Enter</string>
    <string name="action_add_dish">Add Dish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="favorite">Favorites</string>
    <string name="profile">Profile</string>
    <string name="saveContact">Save</string>
    <string name="saveRecipe">Save</string>
    <string name="cancelAddContact">Cancel</string>
    <string name="recipe">recipe</string>
    <string name="addRecipe">TODO</string>
    <string name="edit">Edit</string>
    <string name="saveProfile">Save</string>
    <string name="my_recipes">My Recipes</string>
    <string name="skip">Skip</string>
    <string name="delete">Delete</string>
    <string name="aboutUs">Our application includes a set of recipes, but what distinguishes it is that you can add your favorite recipes and when you use it, you will explore its features</string>
    <string name="facebook">Facebook</string>
    <string name="telephone">Telephone</string>
    <string name="location">Location</string>


    <string-array name="category">
        <item>Main</item>
        <item>Soap</item>
        <item>Appetizer</item>
    </string-array>

</resources>